# AI_pdf_reader

./: .gitignore  README.md  progress.md
backend/: download_model.py  pyproject.toml
backend/services/: cache.py  ocr.py  pdf_parser.py
design/: _OCR.html  _analysis.html  _main.html  _settings.html
docs/: architecture_design.md
tests/: test_ocr.py
