[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for AI PDF Reader"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "pydantic[email]>=2.9.2",
    "pydantic-settings>=2.5.2",
    "openai>=2.29.0",
    "pymupdf>=1.27.2.2",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "faiss-cpu>=1.13.2",
    "diskcache>=5.6.3",
    "mlx-lm>=0.31.1",
    "mlx-vlm>=0.4.1",
    "pillow>=12.1.1",
]
